# git-hist

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: app.rs  args.rs
src/app/: commit.rs  controller.rs  dashboard.rs  diff.rs  git.rs  history.rs  mod.rs  state.rs  terminal.rs
