[package]
name = "git-hist"
version = "0.1.0"
authors = ["Ark <target.ark@gmail.com>"]
description = "A CLI to browse the history of files in any git repository **on a terminal**."
repository = "https://github.com/arkark/git-hist"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["git", "cli", "terminal"]
edition = "2018"

[dependencies]
itertools = "0.10"
chrono = "0.4"
anyhow = "1.0"
clap = "3.0.0-beta.2"
git2 = "0.13"
crossterm = "0.19"
tui = { version = "0.14", default-features = false, features = ["crossterm"] }

[[bin]]
name = "git-hist"
path = "src/bin/main.rs"
