[package]
name = "git-hist"
version = "0.1.1"
authors = ["Ark <target.ark@gmail.com>"]
description = "A CLI tool to quickly browse the git history of files on a terminal"
repository = "https://github.com/arkark/git-hist"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["git", "cli", "terminal", "diff"]
edition = "2018"
license = "MIT"

[dependencies]
itertools = "0.10"
chrono = "0.4"
anyhow = "1.0"
once_cell = "1.7"
clap = { version = "3.0.0-beta.2", features = ["wrap_help"] }
git2 = "0.13"
similar = { version ="1.3", features = ["bytes", "inline"] }
crossterm = "0.19"
tui = { version = "0.14", default-features = false, features = ["crossterm"] }

[[bin]]
name = "git-hist"
path = "src/bin/main.rs"
