[package]
authors = ["Ark <target.ark@gmail.com>"]
categories = ["command-line-utilities"]
description = "A CLI tool to quickly browse the git history of files on a terminal"
edition = "2018"
keywords = ["git", "cli", "terminal", "diff"]
license = "MIT"
name = "git-hist"
readme = "README.md"
repository = "https://github.com/arkark/git-hist"
version = "1.0.4"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = {version = "= 3.0.0-beta.4", features = ["wrap_help"]}
crossterm = "0.24"
git2 = {version = "0.14", features = ["vendored-openssl"]}
itertools = "0.10"
once_cell = "1.13"
similar = {version = "2.1", features = ["bytes", "inline"]}
tui = {version = "0.18", default-features = false, features = ["crossterm"]}

[[bin]]
name = "git-hist"
path = "src/bin/main.rs"
